--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Satisfy", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -117,8 +117,8 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 28px;
   margin: 0;
   line-height: 1;
-  font-weight: 400;
-  letter-spacing: 3px;
+  font-weight: 700;
+  letter-spacing: 1px;
 }
 
 #header .logo h1 a, #header .logo h1 a:hover {
